FINALLY I align the first section of the page correctly. The next step is add the fonts (btw I add an image to the page)

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/* Reset CSS */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 #body {
   margin: 0;
   padding: 0;
@@ -31,46 +38,32 @@ a {
 }
 
 .hero {
-  margin-top: 20px;
+  flex: 1;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+  width: 100%;
+  justify-content: space-evenly;
+  padding: 32px;
+}
+
+.hero-content {
+  display: flex;
   flex-direction: column;
   align-items: center;
   gap: 16px;
-  width: 60%;
 }
 
 .hero h1,
-.hero p,
-.hero button {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-}
-
-.hero h1 {
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
 .hero p {
-  display: flex;
-  align-self: flex-start;
-  margin: 0;
   max-width: 200px;
 }
 
 .hero button {
-  max-width: 150px;
   align-self: flex-start;
-  font-size: 0.8em;
-  border-radius: 25px;
-  margin: 0;
 }
 
-.hero-img {
-  align-self: flex-end;
-  margin-top: auto;
+.hero img {
+  width: 400px;
+  height: auto;
 }
